# strawberry-chemist

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  LIMITATIONS.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: api-surface.md  connections-and-pagination.md  context-and-extensions.md  examples.md  filters-and-ordering.md  getting-started.md  index.md  nodes-and-relay.md  relationships.md  types-and-fields.md
docs/public-api-redesign/: 01-principles.md  02-public-surface.md  03-fields-and-relationships.md  04-filters-ordering-and-connections.md  05-relay-and-node-ids.md  06-context-and-schema-integration.md  07-migration-roadmap.md  README.md
examples/: README.md
examples/01_types_and_fields/: README.md  app.py  db.py  pyproject.toml  schema.py  test_contract.py
examples/02_relationships/: README.md  db.py  pyproject.toml  schema.py  test_contract.py
examples/03_connections_filters_and_ordering/: README.md  db.py  pyproject.toml  schema.py  test_contract.py
examples/04_nodes_and_relay_ids/: README.md  app.py  db.py  pyproject.toml  schema.py  test_contract.py
examples/05_context_and_extensions/: README.md  app.py  db.py  pyproject.toml  schema.py  test_contract.py
examples/06_manual_filters_and_orders/: README.md  app.py  db.py  pyproject.toml  schema.py  test_contract.py
examples/07_node_lookup_and_permissions/: Makefile  README.md  db.py  pyproject.toml  schema.py  test_contract.py
examples/08_nested_pagination_arguments/: README.md  app.py  db.py  pyproject.toml  schema.py  test_contract.py
examples/09_resolver_argument_contracts/: README.md  app.py  db.py  pyproject.toml  schema.py  test_contract.py
examples/10_inheritance_and_relay_bootstrap/: README.md  app.py  db.py  pyproject.toml  schema.py  test_contract.py
examples/uv_smoke_project/: README.md  pyproject.toml  smoke_test.py
examples/v0_2_api/: README.md
examples/v0_2_api/01_types_and_fields/: README.md  pyproject.toml  test_contract.py
examples/v0_2_api/02_relationships/: README.md  app.py  pyproject.toml  test_contract.py
examples/v0_2_api/03_connections_filters_and_ordering/: README.md  app.py  pyproject.toml  test_contract.py
examples/v0_2_api/04_nodes_and_relay_ids/: README.md  app.py  pyproject.toml  test_contract.py
examples/v0_2_api/05_context_and_extensions/: pyproject.toml  test_contract.py
examples/v0_2_api/06_manual_filters_and_orders/: app.py  pyproject.toml  test_contract.py
examples/v0_2_api/07_node_lookup_and_permissions/: app.py  pyproject.toml  test_contract.py
examples/v0_2_api/08_nested_pagination_arguments/: pyproject.toml  test_contract.py
internal_docs/public-api-redesign/: 01-principles.md  02-public-surface.md  04-filters-ordering-and-connections.md  05-relay-and-node-ids.md  06-context-and-schema-integration.md  07-migration-roadmap.md  08-api-surface-refinement-plan.md  README.md
scripts/: example_schema.py  run-example-local  run-example-published
src/strawberry_chemist/: __init__.py  arguments.py  extensions.py  extentions.py  gql_context.py  loaders.py  querying.py  settings.py  type.py  utils.py
src/strawberry_chemist/connection/: __init__.py  base.py  limit.py  relay.py
src/strawberry_chemist/fields/: field.py  resolvers.py  types.py  utils.py
src/strawberry_chemist/filters/: __init__.py  pre_filter.py
src/strawberry_chemist/input/: input.py
src/strawberry_chemist/order/: __init__.py
src/strawberry_chemist/pagination/: __init__.py  base.py  cursor.py  limit_offset.py
src/strawberry_chemist/relay/: __init__.py  base.py  codecs.py  definitions.py  exists_field.py  object_field.py  public.py  registry.py  runtime.py  schema.py
src/strawberry_sqlalchemy/: __init__.py  extentions.py  gql_context.py  loaders.py  type.py  utils.py
src/strawberry_sqlalchemy/connection/: base.py  limit.py  relay.py
src/strawberry_sqlalchemy/fields/: field.py  types.py  utils.py
src/strawberry_sqlalchemy/filters/: pre_filter.py
src/strawberry_sqlalchemy/input/: field.py
src/strawberry_sqlalchemy/order/: __init__.py
src/strawberry_sqlalchemy/pagination/: __init__.py  base.py  cursor.py  limit_offset.py
src/strawberry_sqlalchemy/relay/: __init__.py  alphabet_manipilations.py  base.py  exists_field.py  object_field.py  szudzik_int_bijection.py
tests/: app.py  conftest.py  docker-compose.yml  readme.md
tests/db_fixtures/: psql_fixtures.py  sqlite_fixtures.py
tests/test_end_to_end/test_connection/: conftest.py  schema.py  test_async_permissions.py  test_connection.py
tests/test_end_to_end/test_related/: conftest.py  schema.py  test_related.py
tests/test_end_to_end/test_relay/: conftest.py  schema.py  test_relay_node.py
tests/test_end_to_end/test_through_table/: conftest.py  schema.py  test_through_relation.py
tests/test_loaders/: __init__.py  test_connection_loader_ordering.py  test_loading_strategies_psql.py  test_loading_strategy_sqlite.py  test_loading_with_empty_psql.py
tests/test_public_api/: test_examples_contracts.py  test_surface.py  test_v0_2_contracts.py
tests/test_type/: test_inheritance.py  test_type_generation.py
