[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "strawberry-sqlalchemy"
version = "0.1.0"
description = "Standalone Strawberry GraphQL helpers for SQLAlchemy models."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "bidict>=0.23.1",
    "greenlet>=3.2.2",
    "graphql-core>=3.2.6",
    "sqlalchemy>=2.0.41",
    "strawberry-graphql==0.211.1",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
    "psycopg>=3.2.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.1.0",
    "pytest-postgresql>=7.0.2",
    "starlette>=0.47.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/strawberry_sqlalchemy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = '-m "not psql"'
asyncio_mode = "auto"
markers = [
    "psql: requires PostgreSQL test dependencies and a running PostgreSQL service",
]
