[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "strawberry-sqlalchemy"
version = "0.1.0"
description = "Standalone Strawberry GraphQL helpers for SQLAlchemy models."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "bidict>=0.23.1",
    "greenlet>=3.2.2",
    "graphql-core>=3.2.6",
    "sqlalchemy>=2.0.41",
    "strawberry-graphql==0.211.1",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "psycopg>=3.2.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.1.0",
    "pytest-postgresql>=7.0.2",
    "ruff>=0.11.0",
    "starlette>=0.47.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/strawberry_sqlalchemy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = '-m "not psql"'
asyncio_mode = "auto"
markers = [
    "psql: requires PostgreSQL test dependencies and a running PostgreSQL service",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
files = ["src/strawberry_sqlalchemy"]
ignore_missing_imports = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "strawberry_sqlalchemy.connection.base",
    "strawberry_sqlalchemy.extentions",
    "strawberry_sqlalchemy.fields.field",
    "strawberry_sqlalchemy.fields.types",
    "strawberry_sqlalchemy.filters",
    "strawberry_sqlalchemy.filters.pre_filter",
    "strawberry_sqlalchemy.loaders",
    "strawberry_sqlalchemy.order",
    "strawberry_sqlalchemy.pagination.base",
    "strawberry_sqlalchemy.pagination.cursor",
    "strawberry_sqlalchemy.pagination.limit_offset",
    "strawberry_sqlalchemy.relay.base",
    "strawberry_sqlalchemy.relay.object_field",
    "strawberry_sqlalchemy.type",
]
ignore_errors = true
