[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "strawberry-chemist"
version = "0.2.4"
description = "Strawberry GraphQL helpers for SQLAlchemy models."
authors = [
    { name = "strawberry-chemist contributors" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["graphql", "strawberry", "sqlalchemy", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bidict>=0.23.1",
    "greenlet>=3.2.2",
    "graphql-core>=3.2.6",
    "sqlalchemy>=2.0.41",
    "strawberry-graphql~=0.311.1",
]

[project.urls]
Homepage = "https://github.com/MeRuslan/strawberry-chemist"
Repository = "https://github.com/MeRuslan/strawberry-chemist"
Issues = "https://github.com/MeRuslan/strawberry-chemist/issues"
Changelog = "https://github.com/MeRuslan/strawberry-chemist/blob/main/CHANGELOG.md"
Documentation = "https://meruslan.github.io/strawberry-chemist/"

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "build>=1.2.2.post1",
    "httpx>=0.28.1",
    "mkdocs>=1.6.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "psycopg>=3.2.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.1.0",
    "pytest-postgresql>=7.0.2",
    "ruff>=0.11.0",
    "starlette>=0.47.3",
    "uvicorn>=0.34.0",
    "twine>=6.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/strawberry_chemist"]

[tool.hatch.build]
exclude = [
    "/.venv",
    "/.venv*",
    "/.mypy_cache",
    "/.pytest_cache",
    "/.ruff_cache",
    "/__pycache__",
    "/dist",
    "/site",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = '-m "not psql"'
asyncio_mode = "auto"
markers = [
    "psql: requires PostgreSQL test dependencies and a running PostgreSQL service",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
files = ["src/strawberry_chemist"]
ignore_missing_imports = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
